# vidscan

./: .gitignore  README.md  requirements.txt  vidscan.py
.github/workflows/: static.yml
benchmarks/: generate_benchmark_data.py  generate_dummies.py
benchmarks/cli/: cli_benchmark.py
benchmarks/web/: web_benchmark.html
cli/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  vidscan.py
cli/src/vidscan/: __main__.py
web/: app.js  index.html  mediainfo-worker.js  scanner.js  style.css
