[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidscan"
version = "0.9.0"
description = "Recursively scan media libraries and generate structured reports of duration, file count, and size per folder - powered by ffprobe."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/ompatel100/vidscan"
"Bug Tracker" = "https://github.com/ompatel100/vidscan/issues"

[project.scripts]
vidscan = "vidscan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]